# tiny-dnn

./: .gitignore
examples/: CMakeLists.txt
examples/caffe_image_classification_sycl/: CMakeLists.txt  caffe_image_classification_sycl.cpp
models/bvlc/: download_bvlc_model.sh  train_val.prototxt
